--- a/templates/profile/edit.html
+++ b/templates/profile/edit.html
@@ -235,7 +235,7 @@
               </div>
               <div class="form-group d-flex mt-3">
                 <label class="col-form-label col-2 p-2 bg-gray dob rounded">Date of Birth</label>
-                <input type="date" class="form-control m-1 col-lg-4 col-md-4 col-sm-4 col-10 p-2 bg-gray" name="dob" value="{{request.user.bio.dob|date:'Y-m-d'}}"/>
+                <input type="date" class="form-control m-1 col-lg-4 col-md-4 col-sm-4 col-10 p-2 bg-gray" name="dob" value="{{request.user.bio.dob|date:'Y-m-d'}}" required/>
               </div>
               
        
