some profile updates

--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -249,7 +249,7 @@
 
 
               <div class="col-md-10 col-sm-10 col-12 profile-about bg-gray m-2">
-                <h5>About Himself</h5>
+                                          {% if request.user.pk == current_user.pk  %}<h5>About Myself</h5>{% else %}<h5>About Himself</h5>{% endif %} 
                 <p>
                   {{current_user.bio.about}}
                 </p>
@@ -312,17 +312,17 @@
                           <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px">
                             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Gender</label>
                             <div class="gender col-sm-10 col-9 pt-2">
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
                                   value="1" &nbsp; ## ##{% if current_user.bio.gender == '1' %} checked {% endif %}  disabled/>
                                 <label class="form-check-label p-0" for="inlineRadio1">Male</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
                                   value="2" &nbsp; ## ##{% if current_user.bio.gender == '2' %} checked {% endif %} disabled />
                                 <label class="form-check-label p-0" for="inlineRadio2">Female</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
                                   value="3" &nbsp; ## ##{% if current_user.bio.gender == '3' %} checked {% endif %} disabled/>
                                 <label class="form-check-label p-0" for="inlineRadio3">Transgender</label>
@@ -331,26 +331,26 @@
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
                                   value="4" &nbsp; ## ##{% if current_user.bio.gender == '4' %} checked {% endif %} disabled/>
                                 <label class="form-check-label p-0" for="inlineRadio4">Not To Say</label>
-                              </div>
+                              </div> {% endcomment %}
                             </div>
                           </div>
                           <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px">
                             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Category</label>
                             <div class="gender col-sm-10 col-9 pt-2">
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                   id="inlineRadio5" value="1" &nbsp; &nbsp;{% if current_user.bio.category == '1' %}
                                   checked &nbsp;&nbsp;{% endif %} disabled/>
                                 <label class="form-check-label p-0" for="inlineRadio5">Single
                                 </label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                   id="inlineRadio6" value="2" &nbsp; &nbsp;{% if current_user.bio.category == '2' %}
                                   checked &nbsp;&nbsp;{% endif %} disabled/>
                                 <label class="form-check-label p-0" for="inlineRadio6">Couple</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                   id="inlineRadio7" value="3" &nbsp; ## {% if current_user.bio.category == '3' %}
                                   checked {% endif %}  disabled/>
@@ -361,7 +361,7 @@
                                   id="inlineRadio8" value="4" &nbsp;&nbsp;
                                   &nbsp;{% if current_user.bio.category == '4' %} checked {% endif %} disabled />
                                 <label class="form-check-label p-0" for="inlineRadio8">Divorced</label>
-                              </div>
+                              </div> {% endcomment %}
                             </div>
                           </div>
                           {% if current_user.bio.category == '2' %}
@@ -404,7 +404,7 @@
                           {% endcomment %}
 
                           <div class="col-12 profile-about-them bg-gray mt-2">
-                            <h5>About Himself</h5>
+                           {% if request.user.pk == current_user.pk  %}<h5>About Myself</h5>{% else %}<h5>About Himself</h5>{% endif %} 
                             <p>{{current_user.bio.about}}</p>
                           </div>
                         </form>
@@ -825,17 +825,17 @@
                    <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px">
                             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Gender</label>
                             <div class="gender col-sm-10 col-9 pt-2">
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" 
                                   value="1" &nbsp; ## ##{% if current_user.bio.gender == '1' %} checked {% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio1">Male</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" 
                                   value="2" &nbsp; ## ##{% if current_user.bio.gender == '2' %} checked {% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio2">Female</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" 
                                   value="3" &nbsp; ## ##{% if current_user.bio.gender == '3' %} checked {% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio3">Transgender</label>
@@ -844,26 +844,26 @@
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" 
                                   value="4" &nbsp; ## ##{% if current_user.bio.gender == '4' %} checked {% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio4">Not To Say</label>
-                              </div>
+                              </div> {% endcomment %}
                             </div>
                           </div>
                           <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px">
                             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Category</label>
                             <div class="gender col-sm-10 col-9 pt-2">
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input watcher" type="radio" name="inlineRadioOptions1"
                                    value="1" &nbsp; &nbsp;{% if current_user.bio.category == '1' %}
                                   checked &nbsp;&nbsp;{% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio5">Single
                                 </label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                                 <input class="form-check-input watcher" type="radio" name="inlineRadioOptions1"
                                   id="couple-event" value="2" &nbsp; &nbsp;{% if current_user.bio.category == '2' %}
                                   checked &nbsp;&nbsp;{% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio6">Couple</label>
                               </div>
-                              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+                              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                                 <input class="form-check-input watcher" type="radio" name="inlineRadioOptions1"
                                    value="3" &nbsp; ## {% if current_user.bio.category == '3' %}
                                   checked {% endif %} />
@@ -874,7 +874,7 @@
                                    value="4" &nbsp;&nbsp;
                                   &nbsp;{% if current_user.bio.category == '4' %} checked {% endif %} />
                                 <label class="form-check-label p-0" for="inlineRadio8">Divorced</label>
-                              </div>
+                              </div> {% endcomment %}
                             </div>
                           </div>
             				  <div class="form-group partdob mt-3" id='partner-pop'>
