--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -51,43 +51,43 @@
           <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px;">
             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Category</label>
             <div class="gender d-flex col-sm-10 col-9 pt-2">
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="1" checked>
                 <label class="form-check-label p-0" for="inlineRadio5">Single</label>
               </div>
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="2">
                 <label class="form-check-label p-0" for="inlineRadio6">Couple</label>
               </div>
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio7" value="3">
                 <label class="form-check-label p-0" for="inlineRadio7">Widower</label>
               </div>
               <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio8" value="4">
                 <label class="form-check-label p-0" for="inlineRadio8">Divorced</label>
-              </div>
+              </div> {% endcomment %}
             </div>
           </div>
           <div class="form-group d-flex bg-gray details-group m-1 mt-3" style="border-radius: 6px;">
             <label for="Email" class="col-sm-2 col-3 col-form-label p-2 m-1">Gender</label>
             <div class="gender d-flex col-sm-10 col-9 pt-2">
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio1" value="1">
-                <label class="form-check-label p-0" for="inlineRadio1">Male</label>
+              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio1" value="1" checked> 
+                <label class="form-check-label p-0" for="inlineRadio1" >Male</label>
               </div>
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+              <div class="form-check d-flex pl-4 col-md-4 col-sm-5 col-12 mx-auto">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio2" value="2">
                 <label class="form-check-label p-0" for="inlineRadio2">Female</label>
               </div>
-              <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
+              {% comment %} <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio3" value="3">
                 <label class="form-check-label p-0" for="inlineRadio3">Transgenders</label>
               </div>
               <div class="form-check d-flex pl-4 col-md-3 col-sm-3 col-12">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio4" value="4" checked>
                 <label class="form-check-label p-0" for="inlineRadio4">Not To Say</label>
-              </div>
+              </div> {% endcomment %}
             </div>
           </div>
           <div class="form-group d-flex details-group dob m-1">
